# Mini-DevOps_CLI_Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
mini_devops_cli/: __init__.py  cli.py
mini_devops_cli/commands/: __init__.py  docker_manager.py  file_manager.py  log_reader.py  scheduler.py  system_monitor.py
tests/: test_docker_manager.py  test_file_manager.py  test_log_reader.py  test_scheduler.py  test_system_monitor.py
