[project]
name = "mini-devops-cli"
version = "0.1.0"
description = "A DevOps CLI tool for system monitoring, Docker management, and more"
requires-python = ">=3.12"
dependencies = ["click>=8.1", "psutil>=5.9", "docker>=7.0"]

[project.scripts]
devops = "mini_devops_cli.cli:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
